# Podradio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  vcpkg.json
.github/workflows/: build.yml
cmake/: toolchain-aarch64-linux.cmake  toolchain-windows-mingw.cmake
include/podradio/: app.h  cache_manager.h  common.h  config.h  database.h  event_log.h  icon_manager.h  itunes_search.h  layout.h  logger.h  mpv_controller.h  network.h  online_state.h  parsers.h  persistence.h  progress.h  sleep_timer.h  statusbar_color.h  ui.h  url_classifier.h  utils.h  youtube_cache.h
man/: podradio.1
src/: app.cpp  cache_manager.cpp  config.cpp  database.cpp  event_log.cpp  itunes_search.cpp  layout.cpp  logger.cpp  main.cpp  mpv_controller.cpp  network.cpp  online_state.cpp  parsers.cpp  persistence.cpp  podradio.cpp  progress.cpp  sleep_timer.cpp  statusbar_color.cpp  terminal_state.cpp  ui.cpp  utils.cpp  xml_helpers.cpp  youtube_cache.cpp
tests/: CMakeLists.txt  test_database.cpp  test_parsers.cpp  test_utils.cpp
